--- a/app/src/main/res/layout/fragment_exercise_choice.xml
+++ b/app/src/main/res/layout/fragment_exercise_choice.xml
@@ -16,9 +16,10 @@
         android:layout_height="80dp"
         android:layout_gravity="center"
         android:gravity="center"
+        android:textStyle="bold"
+        android:textSize="35sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         android:background="#777777"
-        android:elevation="10dp"
         android:text="Wybierz Ćwiczenie" />
 
     <LinearLayout
@@ -32,15 +33,16 @@
                 android:src="@drawable/squat"
                 android:scaleType="fitCenter"
                 android:cropToPadding="true"
-                android:padding="0dp"/>
+                android:padding="0dp"
+                android:contentDescription="@string/exercise_photo_description"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Przysiad"
+                android:text="@string/squat"
                 android:textAlignment="center"
                 android:gravity="center"
                 android:textColor="#ff0000"
-                android:textSize="35dp"
+                android:textSize="35sp"
                 android:textStyle="bold|italic"
                 android:textAppearance="@anim/nav_default_pop_enter_anim"
                 android:elevation="3dp"
@@ -56,15 +58,16 @@
             android:src="@drawable/benchpress"
             android:scaleType="fitCenter"
             android:cropToPadding="true"
-            android:padding="0dp"/>
+            android:padding="0dp"
+            android:contentDescription="@string/exercise_photo_description"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Wyciskanie sztangi poziomio"
+            android:text="@string/benchpress"
             android:textAlignment="center"
             android:gravity="center"
             android:textColor="#ff0000"
-            android:textSize="35dp"
+            android:textSize="35sp"
             android:textStyle="bold|italic"
             android:textAppearance="@anim/nav_default_pop_enter_anim"
             android:elevation="@dimen/cardview_compat_inset_shadow"
@@ -80,15 +83,16 @@
             android:src="@drawable/deadlift"
             android:scaleType="fitCenter"
             android:cropToPadding="true"
-            android:padding="0dp"/>
+            android:padding="0dp"
+            android:contentDescription="@string/exercise_photo_description"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Martwy ciąg"
+            android:text="@string/deadlift"
             android:textAlignment="center"
             android:gravity="center"
             android:textColor="#ff0000"
-            android:textSize="35dp"
+            android:textSize="35sp"
             android:textStyle="bold|italic"
             android:textAppearance="@anim/nav_default_pop_enter_anim"
             android:elevation="@dimen/cardview_compat_inset_shadow"
@@ -104,19 +108,21 @@
             android:src="@drawable/rowing"
             android:scaleType="fitCenter"
             android:cropToPadding="true"
-            android:padding="0dp"/>
+            android:padding="0dp"
+            android:contentDescription="@string/exercise_photo_description"/>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Wiosłowanie sztangi w opadzie tułowia"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:textColor="#ff0000"
-            android:textSize="35dp"
-            android:textStyle="bold|italic"
-            android:textAppearance="@anim/nav_default_pop_enter_anim"
+            android:background="#2222"
             android:elevation="@dimen/cardview_compat_inset_shadow"
-            android:background="#2222"/>
+            android:gravity="center"
+            android:text="@string/rowing"
+            android:textAlignment="center"
+            android:textAppearance="@anim/nav_default_pop_enter_anim"
+            android:textColor="#ff0000"
+            android:textSize="30sp"
+            android:textStyle="bold|italic" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -128,15 +134,16 @@
             android:src="@drawable/plank"
             android:scaleType="fitCenter"
             android:cropToPadding="true"
-            android:padding="0dp"/>
+            android:padding="0dp"
+            android:contentDescription="@string/exercise_photo_description"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Deska"
+            android:text="@string/plank"
             android:textAlignment="center"
             android:gravity="center"
             android:textColor="#ff0000"
-            android:textSize="35dp"
+            android:textSize="35sp"
             android:textStyle="bold|italic"
             android:textAppearance="@anim/nav_default_pop_enter_anim"
             android:elevation="@dimen/cardview_compat_inset_shadow"
