--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/exerciseChoice">
+    app:startDestination="@id/home2">
     <fragment
         android:id="@+id/training"
         android:name="com.engineer.mobiletrainer.Training"
@@ -17,7 +17,22 @@
         <action
             android:id="@+id/action_exerciseChoice_to_training"
             app:destination="@id/training"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim" />
+            app:enterAnim="@anim/slide_from_right"
+            app:exitAnim="@anim/fade_out"
+            app:popEnterAnim="@anim/fade_in"
+            app:popExitAnim="@anim/slid_from_left" />
+    </fragment>
+    <fragment
+        android:id="@+id/home2"
+        android:name="com.engineer.mobiletrainer.Home"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_home2_to_exerciseChoice"
+            app:destination="@id/exerciseChoice"
+            app:enterAnim="@anim/slide_from_right"
+            app:exitAnim="@anim/fade_out"
+            app:popEnterAnim="@anim/fade_in"
+            app:popExitAnim="@anim/slid_from_left" />
     </fragment>
 </navigation>
