--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -5,6 +5,12 @@
         <item>Reply to all</item>
     </string-array>
 
+    <string-array name="sex_values">
+        <item>Male</item>
+        <item>Female</item>
+        <item>Prefer not to answer</item>
+    </string-array>
+
     <string-array name="reply_values">
         <item>reply</item>
         <item>reply_all</item>
