--- a/app/src/main/res/layout/fragment_plan_details.xml
+++ b/app/src/main/res/layout/fragment_plan_details.xml
@@ -4,16 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragments.PlanDetails">
+    tools:context=".fragments.PlanDetails"
+    android:background="@color/background">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <TextView
+
+        <AutoCompleteTextView
             android:id="@+id/planDetails_planName"
             android:layout_width="match_parent"
             android:layout_height="65dp"
+            android:background="@color/background_dark"
             android:gravity="center"
             android:text="New Plan"
             android:textAlignment="center"
