--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -102,5 +102,19 @@
         android:id="@+id/planDetails"
         android:name="com.engineer.mobiletrainer.fragments.PlanDetails"
         android:label="fragment_plan_details"
-        tools:layout="@layout/fragment_plan_details" />
+        tools:layout="@layout/fragment_plan_details" >
+        <action
+            android:id="@+id/action_planDetails_to_exerciseDetails"
+            app:destination="@id/exerciseDetails" />
+    </fragment>
+    <fragment
+        android:id="@+id/exerciseDetails"
+        android:name="com.engineer.mobiletrainer.ExerciseDetails"
+        android:label="fragment_exercise_details"
+        tools:layout="@layout/fragment_exercise_details" />
+    <fragment
+        android:id="@+id/exercisesFragment"
+        android:name="com.engineer.mobiletrainer.ExercisesFragment"
+        android:label="fragment_exercises"
+        tools:layout="@layout/fragment_exercises" />
 </navigation>
