--- a/app/src/main/res/layout/fragment_training.xml
+++ b/app/src/main/res/layout/fragment_training.xml
@@ -12,6 +12,15 @@
         android:layout_height="match_parent" />
 
     <include layout="@layout/bottom_sheet_layout" />
+    <Button
+        android:id="@+id/trainingTakePhoto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Take Photo"
+        android:background="@drawable/roundedbutton"
+        android:padding="10dp"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="40dp"/>
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
