--- a/app/src/main/res/layout/recyclerview_exercise.xml
+++ b/app/src/main/res/layout/recyclerview_exercise.xml
@@ -52,6 +52,20 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/recycler_view_exercise_name" />
 
+            <ImageButton
+                android:id="@+id/recycler_view_excercise_delete"
+                style="@style/Widget.AppCompat.ImageButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/ic_launcher_background"
+                android:scaleX="0.5"
+                android:scaleY="0.5"
+                android:src="@android:drawable/ic_delete"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
