--- a/app/src/main/res/layout/fragment_plan_details.xml
+++ b/app/src/main/res/layout/fragment_plan_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,36 +8,71 @@
     tools:context=".fragments.PlanDetails"
     android:background="@color/background">
 
-    <LinearLayout
+    <AutoCompleteTextView
+        android:id="@+id/planDetails_planName"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="65dp"
+        android:background="@color/background_dark"
+        android:gravity="center"
+        android:text="New Plan"
+        android:textAlignment="center"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
-        <AutoCompleteTextView
-            android:id="@+id/planDetails_planName"
-            android:layout_width="match_parent"
-            android:layout_height="65dp"
-            android:background="@color/background_dark"
-            android:gravity="center"
-            android:text="New Plan"
-            android:textAlignment="center"
-            android:textSize="25sp"
-            android:textStyle="bold" />
+    <EditText
+        android:id="@+id/planDetails_planDesc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="No description"
+        android:ems="1"
+        android:gravity="start|top"
+        android:inputType="textMultiLine"
+        app:layout_constraintTop_toBottomOf="@id/planDetails_planName"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
-        <EditText
-            android:id="@+id/planDetails_planDesc"
+    <ScrollView
+        android:id="@+id/planDetails_scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="parent"
+        tools:layout_editor_absoluteY="500dp"
+        app:layout_constraintTop_toBottomOf="@id/planDetails_planDesc"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/planDetails_exerciseRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+                <Button
+                    android:id="@+id/plansDetails_addExercise"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:text="+"
+                    android:textSize="20sp"
+                    android:scaleX="0.7"
+                    android:scaleY="0.7"
+                    android:background="@drawable/add_button"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="5dp"/>
+
+        </ScrollView>
+
+        <ImageButton
+            android:id="@+id/planDetails_deletePlan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="No description"
-            android:ems="1"
-            android:gravity="start|top"
-            android:inputType="textMultiLine" />
+            android:src="@android:drawable/ic_menu_delete"
+            app:layout_constraintTop_toBottomOf="@id/planDetails_scrollView"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/planDetails_exerciseRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
     <Button
         android:id="@+id/planDetails_addTrainingSessionButton"
         android:layout_width="wrap_content"
@@ -45,7 +81,10 @@
         android:text="Add to calendar"
         android:layout_gravity="bottom|end"
         android:background="@drawable/roundedbutton"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
 
-</FrameLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
