--- a/app/src/main/res/layout/fragment_main_page.xml
+++ b/app/src/main/res/layout/fragment_main_page.xml
@@ -24,31 +24,13 @@
             android:background="@color/background_dark"
             android:textColor="@color/black"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:text="Your lastly used plan was: "
-                android:textSize="18sp"
-                android:textColor="@color/black"
-                android:gravity="center"/>
-            <TextView
-                android:id="@+id/mainPage_lastTrainingText"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textSize="18sp"
-                android:textStyle="bold"/>
-        </LinearLayout>
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="340dp"
-            android:paddingHorizontal="25dp">
+            android:paddingHorizontal="25dp"
+            android:layout_marginTop="40dp">
 
             <Button
                 android:id="@+id/mainPage_tile_plans"
@@ -69,7 +51,7 @@
                 android:layout_height="160dp"
                 android:layout_gravity="bottom"
                 android:background="@drawable/main_page_tile"
-                android:text="History"
+                android:text="Exercises"
                 android:textSize="30dp"
                 android:textStyle="bold|italic"
                 app:layout_constraintBottom_toBottomOf="parent"
