--- a/app/src/main/res/layout/calendar_day_legend_text.xml
+++ b/app/src/main/res/layout/calendar_day_legend_text.xml
@@ -6,6 +6,6 @@
     android:layout_height="wrap_content"
     android:layout_weight="1"
     android:gravity="center"
-    android:textColor="@color/black"
+    android:textColor="@color/background_dark"
     android:textSize="14sp"
     tools:text="SUN" />
