--- a/app/src/main/res/layout/fragment_exercise_choice.xml
+++ b/app/src/main/res/layout/fragment_exercise_choice.xml
@@ -49,14 +49,14 @@
                 android:background="@color/background"/>
         </LinearLayout>
     <LinearLayout
-        android:id="@+id/benchpressView"
+        android:id="@+id/pushupView"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:orientation="horizontal">
         <ImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:src="@drawable/benchpress"
+            android:src="@drawable/pushup"
             android:scaleType="fitCenter"
             android:cropToPadding="true"
             android:padding="0dp"
@@ -64,7 +64,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/benchpress"
+            android:text="Push Up"
             android:textAlignment="center"
             android:gravity="center"
             android:textColor="#ff0000"
